# SparseQEEcNEO

./: .gitignore  CITATION.bib  CONTRIBUTING  CONTRIBUTING.md  CPP_TWA_SUMMARY.md  CUDAQ_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  GIT_COMMANDS.md  LICENSE  PUSH_TO_GITHUB.md  Project.toml  README  README.md  SSH_SETUP.md  TWA_README.md  clean_code_compliance_report.md  commit_and_push.sh  cudaq_rich_sim_h2_twa.py  cudaq_rich_sim_h2o_twa.py  cudaq_twa_framework.py  demo_cudaq_speedup.py  demo_hamiltonian.cirq  demo_hamiltonian.of  quantum_demo_clean.jl  quantum_integration.ipynb  quantum_integration_example.jl  quick_commit.sh  requirements.txt  requirements_gpu.txt  rich_sim.py  rich_sim_h2.py  rich_sim_h2_cudaq.py  rich_sim_h2_twa.py  rich_sim_h2o.py  rich_sim_h2o_cudaq.py  rich_sim_h2o_twa.py  richerme_ion_analog.py  richerme_ion_analog_cudaq.py  richerme_ion_analog_legacy.py  setup.py  (+6 more)
TEMP/: create_all_files.jl
advanced_examples/: cneo_hf.jl
advanced_examples/cneo/: README.md  test_cneo_mp2.jl
cpp/: BUILD_INSTRUCTIONS.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  NUMERICAL_PRECISION  QUICK_REFERENCE.md  README.md  README_CPP_TWA  README_CPP_TWA.md  STATUS  build.sh  h2_twa_simulator.cpp  h2_twa_simulator.hpp  h2o_twa_simulator.cpp  h2o_twa_simulator.hpp  main_h2.cpp  main_h2o.cpp  richerme_ion_analog.cpp  richerme_ion_analog.h  twa_framework.cpp  twa_framework.hpp  verify_build.sh
cpp/examples/: example_basic.cpp
cpp/tests/: test_richerme.cpp
docs/: CPP_TWA_SUMMARY  CUDAQ_IMPLEMENTATION_SUMMARY.md  CUDAQ_README  CUDAQ_README.md  CUDAQ_TWA_README.md  H2O_UPDATE_SUMMARY.md  H2_IMAGINARY_TIME_IMPROVEMENT  H2_IMAGINARY_TIME_IMPROVEMENT.md  H2_UPDATE_SUMMARY.md  INTEGRATION_GUIDE.md  LIBRARY_CONSOLIDATION.md  LIBRARY_EXPLANATION.md  SIMULATOR_ANALYSIS  SIMULATOR_ANALYSIS.md  TWA_NUMERICAL_FIXES.md  TWA_README.md
docs/api/: API.md
examples/: __init__.py  basic_usage.jl  basic_usage_jl.txt  batch_calculations.jl  batch_calculations_jl.txt  cneo_example.jl  cneo_qee_integration.jl  demo_extended_features.py  demo_zxx.py  hamiltonian_workflow.jl  hamiltonian_workflow_jl.txt  quantum_demo_clean.jl  visualization_demo.jl  visualization_demo_jl.txt
quantum_integration/: README.md
quantum_integration/docs/: CLEAN_CODE_COMPLIANCE.md
quantum_integration/examples/: quantum_demo_simple.jl
quantum_integration/tests/: test_quantum_packages.py
scripts/: analyze_clean_code.jl  benchmark_suite.jl  refactor_naming.jl  show_structure.jl
src/: SparseQEEcNEO.jl  SparseQEEcNEO_jl.txt  cneo_methods.jl  cneo_mp2.jl  configuration_generation.jl  configuration_generation_jl.txt  constants.jl  epc_functionals.jl  epc_functionals_jl.txt  hamiltonian_construction.jl  importance_analysis.jl  importance_analysis_jl.txt  nuclear_methods.jl  nuclear_methods_jl.txt  pyscf_interface.jl  pyscf_interface_jl.txt  qee_methods_jl.txt  quantum_computing.jl  types.jl  types_jl.txt
test/: demo_hamiltonian.qiskit  runtests.jl  runtests_jl.txt  test1.jl  test2.jl  test_cneo_hf.jl  test_cneo_methods.jl  test_configuration_generation.jl  test_epc_functionals.jl  test_epc_functionals_jl.txt  test_hamiltonian_construction_jl.txt  test_importance_analysis_jl.txt  test_integration.jl  test_integration_jl.txt  test_nuclear_methods.jl  test_nuclear_methods_jl.txt  test_performance.jl  test_performance_jl.txt  test_pyscf_interface.jl  test_qee_methods_jl.txt  test_quantum_integration.jl  test_types.jl  test_types_jl.txt
tests/: __init__.py  test_h2o_gates.py  test_richerme_ion_analog.py
tools/: analyze_configurations.jl  analyze_configurations_jl.txt  benchmark_suite_jl.txt  check_dependencies.jl  check_dependencies_jl.txt  visualize_hamiltonian.jl  visualize_hamiltonian_jl.txt
